Reduce section-title paragraph padding to fix line break on desktop

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -422,7 +422,7 @@ html {
 
 .section-title p {
     font-size: 16px;
-    padding: 0px 300px;
+    padding: 0px 160px;
 }
 
 .section-title h2 span {
